file lock: feature mockup

--- a/app/views/projects/blob/_actions.html.haml
+++ b/app/views/projects/blob/_actions.html.haml
@@ -16,6 +16,7 @@
 
 - if current_user
   .btn-group{ role: "group" }
+    = lock_file_link
     = edit_blob_link
     = replace_blob_link
     = delete_blob_link
